hphp/hack/test/typecheck/strict_switch/nullable_bool_not_null.php.exp
File "nullable_bool_not_null.php", line 27, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `null` (Typing[4019])
